# biotool-photosynthesis

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  Start.py  _requirements.txt  environment.yml  model.py  pyproject.toml  requirements.in  requirements.txt  start.py  test.py  translate.bash  translate_sarah.bash  utils.py  video_transcripts
.devcontainer/: devcontainer.json
.streamlit/: config.toml  custom.css
cite_files/: ComPhot.bib  ComPhot.enw  ComPhot.ris
locales/: allversion.po  collect_allversion_po.py  rename_allversion_po.ipynb  split_allversion_po.py  test_all_text.ipynb
pages/: Analyse.py  Brain.py  Method.py  Methode.py  _monkey_patch.py  _sidebar.py  analyse.py  brain.py  conclusion.py  contact.py  first_analysis.py  method.py  model_explain.py  photosynthesis.py  plant_memory.py
pages/assets/: SIR_model.py  _sir_v2.py  sir_v1.py  sir_v1_integ.py  sir_v2.py  sir_v2_model.py  sir_v2_rate_fns.py  sir_v2_reactions.py  sir_v2_simulation.py  sird.py
pages/assets/FCvB/: FCvB_functions.py
pages/assets/SIR_model/: _sir_v1.py  _sir_v2.py  sir_utils.py  sir_v1_plot.py  sir_v2_rate_fns.py
pages/assets/model/: _model_functions.py  _model_test.py  model_algebraicmodules.py  model_basicplot.py  model_definesim.py  model_derivedparameters.py  (+2 more)
poster/: HHu.png:Zone.Identifier  installation  rwth_jp_computational_life_science_en_weiss_hellblau_rgb.png:Zone.Identifier
routes/: _monkey_patch.py  conclusion.py  contact.py  exp_in_silico.py  home.py  method.py  model_explain.py  photosynthesis.py  plant_memory.py
(+112 files in other folders)
